--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,1 @@
-{
-  "token": "7100847504:AAEx_w_mugzLVQp8HgfPxBmlhIBXzD11H_k",
-  "chat_id": "-4852844368"
-}
+{"token": "7100847504:AAEx_w_mugzLVQp8HgfPxBmlhIBXzD11H_k", "chat_id": "-4852844368"}
